# qdrant-playground

./: README.md  compose.yml  docker-compose.yml  init.py  pyproject.toml  search.ipynb
