[tool.poetry]
name = "qdrant-playground"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "qdrant_playground"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
jupyter = "^1.0.0"
requests = "^2.31.0"
qdrant-client = "^1.4.0"
transformers = "^4.31.0"
datasets = "^2.14.4"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
